sanger/sites/kidneycellatlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kidney-cell-atlas
  labels:
    app: kidney-cell-atlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kidney-cell-atlas
---
apiVersion: v1
kind: Service
metadata:
  name: mature-kidney-immune
  labels:
    app: mature-kidney-immune
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: mature-kidney-immune
---
apiVersion: v1
kind: Service
metadata:
  name: mature-non-pt-parenchyma
  labels:
    app: mature-non-pt-parenchyma
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: mature-non-pt-parenchyma
---
apiVersion: v1
kind: Service
metadata:
  name: mature-kidney-global
  labels:
    app: mature-kidney-global
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: mature-kidney-global
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-kidney-stroma
  labels:
    app: fetal-kidney-stroma
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: fetal-kidney-stroma
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-kidney-global
  labels:
    app: fetal-kidney-global
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: fetal-kidney-global
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-kidney-developing-nephron
  labels:
    app: fetal-kidney-developing-nephron
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: fetal-kidney-developing-nephron
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-kidney-immune
  labels:
    app: fetal-kidney-immune
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: fetal-kidney-immune
